[gd_scene load_steps=26 format=2]

[ext_resource path="res://Sprites/GameImages/OldDarkCastleScreen.png" type="Texture" id=1]
[ext_resource path="res://Sprites/GameImages/CemeteryScreen.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GameImages/CemeteryScreenLowRes.png" type="Texture" id=3]
[ext_resource path="res://Sprites/GameImages/OldDarkCastleScreenLowRes.png" type="Texture" id=4]
[ext_resource path="res://Sprites/GameImages/ChurchScreenLowRes.png" type="Texture" id=5]
[ext_resource path="res://Sprites/GameImages/SwampScreenLowRes.png" type="Texture" id=6]
[ext_resource path="res://Sprites/GameImages/GothicHorrorScreenLowRes.png" type="Texture" id=7]
[ext_resource path="res://Sprites/GameImages/StageSelect.png" type="Texture" id=8]
[ext_resource path="res://Script/Menus/StageSelect.gd" type="Script" id=9]
[ext_resource path="res://Sprites/GameImages/ChurchScreen.png" type="Texture" id=10]
[ext_resource path="res://Sprites/GameImages/SwampScreen.png" type="Texture" id=11]
[ext_resource path="res://Sprites/GameImages/GothicHorrorScreen.png" type="Texture" id=12]
[ext_resource path="res://Script/Menus/StageButton.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Stages/OldDarkCastleStage.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Stages/ChurchStage.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Stages/GothicHorrorStage.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Stages/CemeteryStage.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Stages/SwampStage.tscn" type="PackedScene" id=18]


[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://Font/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="ShaderMaterial" id=5]

[sub_resource type="ShaderMaterial" id=6]

[sub_resource type="ShaderMaterial" id=7]

[node name="StageSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgTransition" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 26
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageSelect" type="Label" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 640.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "StageSelect"
align = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/StageSelect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 640.0
margin_bottom = 167.0
custom_constants/separation = 50
alignment = 1

[node name="Church" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
material = SubResource( 3 )
margin_left = 78.0
margin_right = 206.0
margin_bottom = 72.0
texture_normal = ExtResource( 5 )
script = ExtResource( 13 )
stage_big_image = ExtResource( 10 )
packed_level = ExtResource( 15 )

[node name="GothicHorror" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
material = SubResource( 4 )
margin_left = 256.0
margin_right = 384.0
margin_bottom = 72.0
texture_normal = ExtResource( 7 )
script = ExtResource( 13 )
stage_big_image = ExtResource( 12 )
packed_level = ExtResource( 16 )

[node name="OldDarkCastle" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
material = SubResource( 5 )
margin_left = 434.0
margin_right = 562.0
margin_bottom = 72.0
texture_normal = ExtResource( 4 )
script = ExtResource( 13 )
stage_big_image = ExtResource( 1 )
packed_level = ExtResource( 14 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 193.0
margin_right = 640.0
margin_bottom = 265.0
custom_constants/separation = 50
alignment = 1

[node name="Swamp" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
material = SubResource( 6 )
margin_left = 167.0
margin_right = 295.0
margin_bottom = 72.0
texture_normal = ExtResource( 6 )
script = ExtResource( 13 )
stage_big_image = ExtResource( 11 )
packed_level = ExtResource( 18 )

[node name="Cemetery" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
material = SubResource( 7 )
margin_left = 345.0
margin_right = 473.0
margin_bottom = 72.0
texture_normal = ExtResource( 3 )
script = ExtResource( 13 )
stage_big_image = ExtResource( 2 )
packed_level = ExtResource( 17 )

[node name="LevelName" type="Label" parent="VBoxContainer"]
margin_top = 291.0
margin_right = 640.0
margin_bottom = 323.0
custom_fonts/font = SubResource( 2 )
text = "Church"
align = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/LevelName"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageSelectCursor" type="Sprite" parent="."]
position = Vector2( -141, 131 )
texture = ExtResource( 8 )
centered = false

[node name="Tween" type="Tween" parent="."]
